News UAT/force-app/main/default/objects/Account/fields/datasan__Shipping_Address_Sa1Code7d__c.field-meta.xml
<CustomField>
    <fullName>datasan__Shipping_Address_Sa1Code7d__c</fullName>
    <label>Shipping Address Sa1Code7d</label>
    <length>36</length>
    <type>Text</type>
</CustomField>