News UAT/force-app/main/default/objects/Account/fields/datasan__Shipping_Address_Sa1CodeMain__c.field-meta.xml
<CustomField>
    <fullName>datasan__Shipping_Address_Sa1CodeMain__c</fullName>
    <label>Shipping Address Sa1CodeMain</label>
    <length>36</length>
    <type>Text</type>
</CustomField>