News UAT/force-app/main/default/objects/Account/fields/datasan__Shipping_Address_Sa2Name__c.field-meta.xml
<CustomField>
    <fullName>datasan__Shipping_Address_Sa2Name__c</fullName>
    <label>Shipping Address Sa2Name</label>
    <length>36</length>
    <type>Text</type>
</CustomField>