News UAT/force-app/main/default/objects/Account/fields/datasan__Shipping_Address_Sa4Code__c.field-meta.xml
<CustomField>
    <fullName>datasan__Shipping_Address_Sa4Code__c</fullName>
    <label>Shipping Address Sa4Code</label>
    <length>36</length>
    <type>Text</type>
</CustomField>