News UAT/force-app/main/default/objects/Account/fields/datasan__Shipping_Address_StateCode__c.field-meta.xml
<CustomField>
    <fullName>datasan__Shipping_Address_StateCode__c</fullName>
    <label>Shipping Address StateCode</label>
    <length>36</length>
    <type>Text</type>
</CustomField>