News UAT/force-app/main/default/objects/Account/fields/Days_Since_Activity__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Activity__c</fullName>
    <formula>IF(ISBLANK(Last_Opportunity_Modified_Date__c), (TODAY() - Last_Event_Modified_Date__c),
IF(ISBLANK(Last_Event_Modified_Date__c), (TODAY() - Last_Opportunity_Modified_Date__c),
MIN(TODAY() - Last_Opportunity_Modified_Date__c, TODAY() - Last_Event_Modified_Date__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Since Activity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>