News UAT/force-app/main/default/objects/Account/fields/Digital_Last_Transaction_Date__c.field-meta.xml
<CustomField>
    <fullName>Digital_Last_Transaction_Date__c</fullName>
    <label>Digital Last Transaction Date</label>
    <type>Date</type>
</CustomField>