News UAT/force-app/main/default/objects/Account/fields/DPID_Primary_Address__c.field-meta.xml
<CustomField>
    <fullName>DPID_Primary_Address__c</fullName>
    <label>DPID - Primary Address</label>
    <length>50</length>
    <type>Text</type>
</CustomField>