News UAT/force-app/main/default/objects/Account/fields/DPID_Secondary_Address__c.field-meta.xml
<CustomField>
    <fullName>DPID_Secondary_Address__c</fullName>
    <label>DPID - Additional Address</label>
    <length>50</length>
    <type>Text</type>
</CustomField>