News UAT/force-app/main/default/objects/Account/fields/Empty_Core_Fields__c.field-meta.xml
<CustomField>
    <fullName>Empty_Core_Fields__c</fullName>
    <formula>OR( ISBLANK( Phone ) ,  IF(  RecordType.DeveloperName   = &quot;Private_Party&quot;, OR(ISBLANK( PersonMailingStreet ) , ISBLANK( PersonMailingCity ) , ISBLANK( PersonMailingState ) , ISBLANK( PersonMailingCountry ) , ISBLANK( PersonMailingPostalCode ), ISBLANK(  datasan__Mailing_Address_DPID__pc )), OR(ISBLANK( BillingStreet ) , ISBLANK( BillingCity ) , ISBLANK( BillingState ) , ISBLANK( BillingCountry ) , ISBLANK( BillingPostalCode ), ISBLANK(  datasan__Billing_Address_DPID__c ))) , ISBLANK( AccountNumber ) , ISBLANK(  Registered_Name__c ) , ISBLANK( Primary_Contact__c ),  CONTAINS( Name , &quot;And&quot;), CONTAINS( Name, &quot;t/as&quot;))</formula>
    <label>Empty Core Fields</label>
    <type>Checkbox</type>
</CustomField>