News UAT/force-app/main/default/objects/Account/fields/FULL_FIELD__c.field-meta.xml
<CustomField>
    <fullName>FULL_FIELD__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>FULL FIELD</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts (FULL FIELD)</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>