News UAT/force-app/main/default/objects/Account/fields/Gel_Id__c.field-meta.xml
<CustomField>
    <fullName>Gel_Id__c</fullName>
    <description>Gel Id for matching with salesforce connect</description>
    <externalId>true</externalId>
    <label>Gel Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>