News UAT/force-app/main/default/objects/Account/fields/GST_Exempt_Check__c.field-meta.xml
<CustomField>
    <fullName>GST_Exempt_Check__c</fullName>
    <formula>IF(NOT(GST_Exempt__c), &quot;GST&quot;,&quot;No Tax&quot;)</formula>
    <label>GST Exempt Check</label>
    <type>Text</type>
</CustomField>