News UAT/force-app/main/default/objects/Account/fields/Has_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Has_Agreement__c</fullName>
    <description>Has an Agreement relationship count</description>
    <label>Has Agreement</label>
    <summaryFilterItems>
        <field>Account_Agreement_Relationship__c.Junction_Status__c</field>
        <operation>equals</operation>
        <value>Current</value>
    </summaryFilterItems>
    <summaryForeignKey>Account_Agreement_Relationship__c.Account__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>