News UAT/force-app/main/default/objects/Account/fields/Industry_Code__c.field-meta.xml
<CustomField>
    <fullName>Industry_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Industry Codes are imported from the ANSIC standard of Industry Codes. It is periodically maintained and the information in this field will feed into Opportunities and Bookings.</inlineHelpText>
    <label>Industry</label>
    <referenceTo>Industry_Code__c</referenceTo>
    <relationshipLabel>Accounts_IndustryCodes</relationshipLabel>
    <relationshipName>Accounts_Industry</relationshipName>
    <type>Lookup</type>
</CustomField>