News UAT/force-app/main/default/objects/Account/fields/Industry_Code_Name_In_Text__c.field-meta.xml
<CustomField>
    <fullName>Industry_Code_Name_In_Text__c</fullName>
    <formula>Industry_Code__r.Industry_Code_Adpoint__c</formula>
    <inlineHelpText>Do not display on screen. Field is created so ESB does not need to translate SFDC ID</inlineHelpText>
    <label>Industry Code (Name In Text)</label>
    <type>Text</type>
</CustomField>