News UAT/force-app/main/default/objects/Account/fields/Is_Agency__c.field-meta.xml
<CustomField>
    <fullName>Is_Agency__c</fullName>
    <formula>If(RecordType.DeveloperName = &#39;Agency_Account_Type&#39;, True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Agency</label>
    <type>Checkbox</type>
</CustomField>