News UAT/force-app/main/default/objects/Account/fields/Is_Digital__c.field-meta.xml
<CustomField>
    <fullName>Is_Digital__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Turns this Account into a Digital Account - a corresponding Account is created in the Adpoint System.</description>
    <inlineHelpText>Check to enable this as a Digital Account and perform digital Adpoint Bookings. Once turned Digital, it cannot be unchecked.</inlineHelpText>
    <label>Is this a Digital Account?</label>
    <type>Checkbox</type>
</CustomField>