News UAT/force-app/main/default/objects/Account/fields/Is_NewsXtend_Customer__c.field-meta.xml
<CustomField>
    <fullName>Is_NewsXtend_Customer__c</fullName>
    <inlineHelpText>If number is greater than zero, Account has at least 1 Opportunity Closed/Won which has NewsXtend as the Opportunity Platform</inlineHelpText>
    <label>Is NewsXtend Customer</label>
    <summaryFilterItems>
        <field>Opportunity.IsWon</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.Opportunity_Platform_NewsXtend__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>