News UAT/force-app/main/default/objects/Account/fields/Is_NX_ANZ_customer__c.field-meta.xml
<CustomField>
    <fullName>Is_NX_ANZ_customer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is NX ANZ customer?</label>
    <type>Checkbox</type>
</CustomField>