News UAT/force-app/main/default/objects/Account/fields/Is_on_Black_List_Digital_Media__c.field-meta.xml
<CustomField>
    <fullName>Is_on_Black_List_Digital_Media__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Mark an Account as Blacklisted. This will prevent the Account from being used as a Payer in a Digital Booking.</inlineHelpText>
    <label>Is On Blacklist (digital Media)</label>
    <type>Checkbox</type>
</CustomField>