News UAT/force-app/main/default/objects/Account/fields/KeyPlayers__c.field-meta.xml
<CustomField>
    <fullName>KeyPlayers__c</fullName>
    <description>NextGen</description>
    <label>Key Players</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>