News UAT/force-app/main/default/objects/Account/fields/Last_Booking_Division__c.field-meta.xml
<CustomField>
    <fullName>Last_Booking_Division__c</fullName>
    <description>Rollup from latest related Booking record.</description>
    <label>Last Booking Division</label>
    <length>30</length>
    <type>Text</type>
</CustomField>