News UAT/force-app/main/default/objects/Account/fields/Last_Booking_Line_Item_Classifications__c.field-meta.xml
<CustomField>
    <fullName>Last_Booking_Line_Item_Classifications__c</fullName>
    <description>Rollup from latest related Booking record.</description>
    <label>Last Booking Line Item Classifications</label>
    <length>255</length>
    <type>Text</type>
</CustomField>