News UAT/force-app/main/default/objects/Account/fields/Last_Booking_Number__c.field-meta.xml
<CustomField>
    <fullName>Last_Booking_Number__c</fullName>
    <description>Booking number the latest booking record rolled up to the account.</description>
    <label>Last Booking Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>