News UAT/force-app/main/default/objects/Account/fields/Last_Booking_Run_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Last_Booking_Run_Schedule__c</fullName>
    <description>Rollup from latest related Booking record.</description>
    <label>Last Booking Run Schedule</label>
    <type>TextArea</type>
</CustomField>