News UAT/force-app/main/default/objects/Account/fields/Last_Booking_Value__c.field-meta.xml
<CustomField>
    <fullName>Last_Booking_Value__c</fullName>
    <description>2015-05 UserStory16.3 
Booking value the latest booking record rolled up to the account.
This field will be populated by booking trigger, same way as Last Booking Number</description>
    <label>Last Booking Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>