News UAT/force-app/main/default/objects/Account/fields/Last_Case_Modified_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Case_Modified_Date__c</fullName>
    <description>Date the last related Case record was modified for use with Dormant Account determination</description>
    <label>Last Case Modified Date</label>
    <type>Date</type>
</CustomField>