News UAT/force-app/main/default/objects/Account/fields/Last_Client_Engagement__c.field-meta.xml
<CustomField>
    <fullName>Last_Client_Engagement__c</fullName>
    <description>Indicates the last interaction (call or appointment) with this customer</description>
    <inlineHelpText>Indicates the last interaction (call or appointment) with this customer</inlineHelpText>
    <label>Last Client Engagement</label>
    <type>DateTime</type>
</CustomField>