News UAT/force-app/main/default/objects/Account/fields/Last_Event_Modified_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Event_Modified_Date__c</fullName>
    <description>Date the last related Event record was modified for use with Dormant Account determination</description>
    <label>Last Event Modified Date</label>
    <type>Date</type>
</CustomField>