News UAT/force-app/main/default/objects/Account/fields/Last_Opportunity_Modified_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Opportunity_Modified_Date__c</fullName>
    <description>Date the last related Opportunity record was modified for use with Dormant Account determination</description>
    <label>Last Opportunity Modified Date</label>
    <type>Date</type>
</CustomField>