News UAT/force-app/main/default/objects/Account/fields/Last_Task_Modified_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Task_Modified_Date__c</fullName>
    <description>Date the last related Task record was modified for use with Dormant Account determination</description>
    <label>Last Task Modified Date</label>
    <type>Date</type>
</CustomField>