News UAT/force-app/main/default/objects/Account/fields/Loyalty_Program__c.field-meta.xml
<CustomField>
    <fullName>Loyalty_Program__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Account is a current member of the loyalty program</inlineHelpText>
    <label>Loyalty Program</label>
    <type>Checkbox</type>
</CustomField>