News UAT/force-app/main/default/objects/Account/fields/Loyalty_Program_Contact__c.field-meta.xml
<CustomField>
    <fullName>Loyalty_Program_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Loyalty Program Contact</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.Id</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (Loyalty Program Contact)</relationshipLabel>
    <relationshipName>Accounts_Loyalty_Contact</relationshipName>
    <type>Lookup</type>
</CustomField>