News UAT/force-app/main/default/objects/Account/fields/Master_Digital_Status__c.field-meta.xml
<CustomField>
    <fullName>Master_Digital_Status__c</fullName>
    <description>Verifies whether the Account is usable for Digital purposes - using Digital-related fields and the Account Status.

Used in various other formulas and workflows as a check.</description>
    <formula>AND(
  ISPICKVAL(Digital_Status__c,&#39;Active&#39;) , 
  NOT( ISBLANK(AdPoint_Id__c )), 
  ISPICKVAL(Status__c, &#39;Active&#39;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Master Digital Status</label>
    <type>Checkbox</type>
</CustomField>