News UAT/force-app/main/default/objects/Account/fields/Media_Agency_AdPoint_Id__c.field-meta.xml
<CustomField>
    <fullName>Media_Agency_AdPoint_Id__c</fullName>
    <formula>Media_Agency_For_Digital_Customer__r.AdPoint_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Media Agency AdPoint Id</label>
    <type>Text</type>
</CustomField>