News UAT/force-app/main/default/objects/Account/fields/Media_Agency_For_Digital_Customer__c.field-meta.xml
<CustomField>
    <fullName>Media_Agency_For_Digital_Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Preferred Media Agency for a digital media customer. It must be an Agency and it must already be Digital.</inlineHelpText>
    <label>Media Agency (For Digital Customer)</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>It must be an Agency that is Digital (Digital Status is Active)</errorMessage>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Agency Account</value>
        </filterItems>
        <filterItems>
            <field>Account.Digital_Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filterItems>
        <infoMessage>Only Agencies that have been turned Digital is displayed</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts Media Agency (For Digital Customer)</relationshipLabel>
    <relationshipName>Accounts_MediaAgencyDigital</relationshipName>
    <type>Lookup</type>
</CustomField>